# Tably

./: .gitignore  README.md  index.html  package-lock.json  package.json  run_dev.sh
.github/workflows/: deploy.yaml
Back-End/: .env.example  convert_mscz_to_XML.py  main.py  pyproject.toml  unified_api.py
Back-End/app/: config.py  constants.py  convert_mscz_to_XML.py  fret_assign.py  homr_api.py  main.py  score_parse.py  tab_convert.py  xml_conversions.py
Front-End/: Ode to Joy.musicxml  index.html  package-lock.json  package.json  pnpm-lock.yaml  test.mscz  tsconfig.json  vite.config.js
Front-End/public/soundfont/: Classical-Guitar-Hedsound.sf3
Front-End/src/: App.jsx  OldApp.jsx  declarations.d.ts  main.jsx
Front-End/src/components/: AlphaTabControls.tsx  AlphaTabViewer.tsx  DescriptionBox.jsx  DescriptionBox.tsx  FileDropBox.jsx  FileUpload.jsx
Front-End/src/pages/: App.jsx  App.tsx  GuitarTabPage.jsx
Front-End/src/styles/: AlphaTabViewer.css  AlphaTabViewer2.css  App.css  DescriptionBox.css  FileDropBox.css  GuitarTabPage.css  index.css
backend/: README.md  pyproject.toml  requirements.txt  test.py
backend/app/: conversions.py  main.py
homr-service/homr/: homr_api.py  pyproject.toml
